fix FindByAddress
